8327695: [lworld] javac can generate incorrect code in inner class' constructors