@@ -34,7 +34,7 @@ public class InlineTypes {
 
     public static final Scenario[] DEFAULT_SCENARIOS = {
             new Scenario(0,
-                         "-XX:+EnableValhalla",
+                         "--enable-preview",
                          "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
@@ -49,7 +49,7 @@ public class InlineTypes {
                          "-XX:+InlineTypeReturnedAsFields"
             ),
             new Scenario(1,
-                         "-XX:+EnableValhalla",
+                         "--enable-preview",
                          "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
@@ -64,7 +64,7 @@ public class InlineTypes {
                          "-XX:-InlineTypeReturnedAsFields"
             ),
             new Scenario(2,
-                         "-XX:+EnableValhalla",
+                         "--enable-preview",
                          "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
@@ -80,7 +80,7 @@ public class InlineTypes {
                          "-XX:+StressInlineTypeReturnedAsFields"
             ),
             new Scenario(3,
-                         "-XX:+EnableValhalla",
+                         "--enable-preview",
                          "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
@@ -94,7 +94,7 @@ public class InlineTypes {
                          "-XX:+InlineTypeReturnedAsFields"
             ),
             new Scenario(4,
-                         "-XX:+EnableValhalla",
+                         "--enable-preview",
                          "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
@@ -108,7 +108,7 @@ public class InlineTypes {
                          "-XX:-ReduceInitialCardMarks"
             ),
             new Scenario(5,
-                         "-XX:+EnableValhalla",
+                         "--enable-preview",
                          "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
                          "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
